Mejorando el login, register, confirm

--- a/src/authApp/v1/public/confirm/index.html
+++ b/src/authApp/v1/public/confirm/index.html
@@ -1,1 +1,25 @@
-confirm
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <main>
+        <form id="confirmForm">
+            <div for="form-group">
+                <label for="password1">Contrasenia</label>
+                <input type="password" id="password1" required placeholder="*********" >
+            </div>
+            <div class="form-group">
+                <label for="password2">Confirmar contrasenia</label>
+                <input type="password" id="password2" required placeholder="*********">
+            </div>
+        </form>
+    </main>
+    <script src="script.js">
+
+    </script>
+</body>
+</html>
