--- a/src/authApp/v1/public/login/index.html
+++ b/src/authApp/v1/public/login/index.html
@@ -1,1 +1,29 @@
-login
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login POSColombia</title>
+</head>
+<body>
+    <main>
+        <h2>Iniciar Sesion</h2>
+        <form id="loginForm">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" placeholder="example@gmail.com.co" required autocomplete="email">
+            </div>
+
+            <div for="form-group">
+                <label for="password">Contrasenia</label>
+                <input type="password" id="password" required >
+            </div>
+            <button type="submit">Iniciar sesion</button>
+        </form>
+        <p>No tienes cuenta? <a href="http://auth.localhost:3000/register">Crear aqui</a></p>
+        <p id='error'></p>
+    </main>
+
+    <script src="script.js"></script>
+</body>
+</html>
